i have change the header and footer

--- a/events.html
+++ b/events.html
@@ -9,31 +9,8 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-
-<!-- HEADER (same as home) -->
-<header class="ctc-header">
-  <div class="header-inner">
-
-    <div class="brand">
-      <div class="logo">
-        <img src="assets/CTC.png" alt="CTC Logo">
-      </div>
-      <div class="tagline">
-        COMMUNITY OF<br>TECHNOLOGY & CODING
-      </div>
-    </div>
-
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="events.html">Events</a>
-      <a href="core_team.html">Core Members</a>
-      <a href="showcase.html">Showcase</a>
-    </nav>
-`
-    <a href="#" class="cta-btn">Join Group</a>
-  </div>
-</header>
+<body data-page="events">
+  <div id="header"></div>
 
 <!-- EVENTS HERO -->
 <section class="events-hero">
@@ -96,9 +73,9 @@
 </section>
 
 <!-- FOOTER -->
-<footer>
-  © 2026 Community of Technology & Coding
-</footer>
+<div id="footer"></div>
+<script src="js/include.js"></script>
+
 
 </body>
 </html>
