--- a/index.html
+++ b/index.html
@@ -14,31 +14,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body data-page="home">
+  <div id="header"></div>
 
-  <!-- HEADER -->
-  <header class="ctc-header">
-    <div class="header-inner">
-
-      <div class="brand">
-        <div class="logo">
-            <img src="assets/CTC.png" alt="CTC Logo">
-        </div>
-        <div class="tagline">
-          COMMUNITY OF<br>TECHNOLOGY & CODING
-        </div>
-      </div>
-
-      <nav class="nav">
-        <a href="index.html">About</a>
-        <a href="events.html">Events</a>
-        <a href="core_team.html">Core Members</a>
-        <a href="showcase.html">Showcase</a>
-      </nav>
-
-      <a href="#" class="cta-btn">Join Group</a>
-    </div>
-  </header>
 
   <!-- HERO -->
   <section class="hero">
@@ -70,13 +48,15 @@
   </section>
 
   <!-- FOOTER -->
-  <footer>
-    © 2026 Community of Technology & Coding
-  </footer>
+  <div id="footer"></div>
+
 
   <!-- THREE JS -->
   <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
   <script src="js/sphere.js"></script>
+  <script src="js/include.js"></script>
+
+
 
 </body>
 </html>
