--- a/showcase.html
+++ b/showcase.html
@@ -9,31 +9,9 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body data-page="showcase">
+  <div id="header"></div>
 
-<!-- HEADER -->
-<header class="ctc-header">
-  <div class="header-inner">
-
-    <div class="brand">
-      <div class="logo">
-        <img src="assets/CTC.png" alt="CTC Logo">
-      </div>
-      <div class="tagline">
-        COMMUNITY OF<br>TECHNOLOGY & CODING
-      </div>
-    </div>
-
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="events.html">Events</a>
-      <a href="core_team.html">Core Members</a>
-      <a href="showcase.html" class="active">Showcase</a>
-    </nav>
-
-    <a href="#" class="cta-btn">Join Group</a>
-  </div>
-</header>
 
 <!-- HERO -->
 <section class="showcase-hero">
@@ -86,9 +64,9 @@
 </section>
 
 <!-- FOOTER -->
-<footer>
-  © 2026 Community of Technology & Coding
-</footer>
+<div id="footer"></div>
+
+<script src="js/include.js"></script>
 
 </body>
 </html>
