i have work on showcase

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="hero-text">
       <h1>INNOVATE.<br>COLLABORATE.<br>CODE.</h1>
       <p>The REC'S premier hub for tech education and networking.</p>
-      <a href="#" class="btn">VIEW THIS WEEKEND'S WORKSHOPS</a>
+      <a href="https://chat.whatsapp.com/GXtNVWbiDFi1IkRotX9yOW" class="btn">JOIN CTC COMMUNITY</a>
     </div>
 
     <div id="sphereContainer"></div>
