--- a/showcase.html
+++ b/showcase.html
@@ -1,72 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>CTC Showcase – Community of Technology & Coding</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CTC Showcase</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-page="showcase">
-  <div id="header"></div>
 
+  <!-- HEADER -->
+  <div id="header" class="reveal"></div> <!-- ✅ -->
 
-<!-- HERO -->
-<section class="showcase-hero">
-  <h1>Project Showcase</h1>
-  <p>Innovative projects built by the CTC community.</p>
-</section>
+  <!-- HERO -->
+  <section class="showcase-hero reveal"> <!-- ✅ -->
+    <h1>Previous Events</h1>
+    <p>Former events, and hackathons from the CTC community.</p>
+  </section>
 
-<!-- FILTER -->
-<section class="showcase-filter">
-  <button class="active">All</button>
-  <button>Web</button>
-  <button>AI / ML</button>
-  <button>Mobile</button>
-  <button>Blockchain</button>
-</section>
+  <!-- FILTER -->
+  <section class="showcase-filter reveal"> <!-- ✅ -->
+    <button class="active" data-filter="all">All</button>
+    <button data-filter="event">Events</button>
+    <button data-filter="hackathon">Hackathons</button>
+  </section>
 
-<!-- SHOWCASE GRID -->
-<section class="showcase-grid">
+  <!-- SHOWCASE COMPONENT TARGET -->
+  <section class="showcase-list" id="showcaseList"></section>
+  <!-- cards will get reveal class from JS -->
 
-  <div class="project-card">
-    <img src="assets/download.jpg" alt="Project">
-    <div class="project-content">
-      <h3>Smart Attendance System</h3>
-      <span>AI / ML • Python • OpenCV</span>
-      <p>Face recognition–based attendance system using machine learning.</p>
-      <a href="#" class="project-btn">View Project</a>
-    </div>
-  </div>
+  <!-- FOOTER -->
+  <div id="footer" class="reveal"></div> <!-- ✅ -->
 
-  <div class="project-card">
-    <img src="assets/download.jpg" alt="Project">
-    <div class="project-content">
-      <h3>CTC Community Website</h3>
-      <span>HTML • CSS • JavaScript</span>
-      <p>Official website built and maintained by CTC members.</p>
-      <a href="#" class="project-btn">Live Demo</a>
-    </div>
-  </div>
-
-  <div class="project-card">
-    <img src="assets/download.jpg" alt="Project">
-    <div class="project-content">
-      <h3>Blockchain Voting App</h3>
-      <span>Blockchain • Solidity • Web3</span>
-      <p>Secure and transparent voting system using blockchain technology.</p>
-      <a href="#" class="project-btn">GitHub</a>
-    </div>
-  </div>
-
-</section>
-
-<!-- FOOTER -->
-<div id="footer"></div>
-
-<script src="js/include.js"></script>
-
+  <script src="js/include.js"></script>
+  <script src="js/showcase.js"></script>
 </body>
 </html>
