final change it's responsive now

--- a/core_team.html
+++ b/core_team.html
@@ -24,7 +24,7 @@ const teamMembers = [
   {
     img: "assets/team/ansh.jpeg",
     name: "Ansh Verma",
-    role: "President & cyber security Lead",
+    role: "President & Cyber Security Lead",
     linkedin: "https://www.linkedin.com/in/ansh-verma",
     github: "https://github.com/anshverma"
     
