--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CTC – Community of Technology & Coding</title>
+  <title>CTC – Community For Technology & Coding</title>
 
   <!-- GOOGLE FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
 
     <div class="card">
       <h3>Advance Your Skills</h3>
-      <p>Explore workshops on App Development, AI, Machine Learning, App Development, Cyber Security, Blockchain and Competitive programming. 
+      <p>Explore workshops on App Development, AI, Machine Learning, Cyber Security, Blockchain and Competitive programming. 
         Join hackathons, meetups, and exclusive tech events.</p>
     </div>
 
