--- a/core_team.html
+++ b/core_team.html
@@ -54,7 +54,7 @@ const teamMembers = [
   },
     {
     img: "assets/team/vaibhav.jpeg",
-    name: "Vaibhav Agarval",
+    name: "Vaibhav Agarwal",
     role: "DevOps Engineer",
     linkedin: "https://www.linkedin.com/in/ansh-verma",
     github: "https://github.com/anshverma"
