--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/home.css">
 </head>
 
 <body data-page="home">
